--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -41,6 +41,8 @@
                       {{"Menu.accountInfor"| translate}}</li>
                     <li nz-menu-item [routerLink]="['/managerPost',1]" routerLinkActive="activeLink">
                       {{"Menu.postManagement"| translate}}</li>
+                    <li nz-menu-item [routerLink]="['/payHistory',1]" routerLinkActive="activeLink">
+                      {{"Menu.payHistory"| translate}}</li>
                     <li nz-menu-divider></li>
                     <li nz-menu-item>{{"Menu.logout"| translate}}</li>
                   </ul>
