update multil language comment button

--- a/src/app/features/detail-hostel/comment/comment.component.html
+++ b/src/app/features/detail-hostel/comment/comment.component.html
@@ -8,8 +8,9 @@
         </div>
         <div>
             <p #comment>{{content}}</p>
-            <span *ngIf="showBtnShowMore" class="cursor-pointer font-semibold" (click)="handelShowMore()">Đọc
-                thêm</span>
+            <span *ngIf="showBtnShowMore" class="cursor-pointer font-semibold"
+                (click)="handelShowMore()">{{titleShowMore}}</span>
+
         </div>
     </div>
 </div>
