feat: update login, signin with api

--- a/src/app/features/active-email/active-email.component.html
+++ b/src/app/features/active-email/active-email.component.html
@@ -1,5 +1,5 @@
-<div class="w-[1200px] h-[800px] m-auto">
-    <nz-spin [nzSpinning]="isSpinning">
+<nz-spin [nzSpinning]="isSpinning">
+    <div class=" w-full h-full lg:w-[1200px] lg:h-[800px] m-auto flex justify-center items-center">
         <nz-alert [nzType]="type" [nzMessage]="message" nzShowIcon></nz-alert>
-    </nz-spin>
-</div>
+    </div>
+</nz-spin>
