--- a/src/app/features/admin/reports/report-list/report-list.component.html
+++ b/src/app/features/admin/reports/report-list/report-list.component.html
@@ -5,7 +5,7 @@
 
         <mat-form-field class="custom-input col-span-1" appearance="outline">
             <mat-label class="bg-white">{{'AdminPage.reportpage.postReport' | translate}}</mat-label>
-            <input formControlName="title" matInput (keyPress)="searchByEnter($event)" />
+            <input formControlName="title" matInput (keypress)="searchByEnter($event)" />
         </mat-form-field>
 
 
