--- a/src/app/features/admin/accounts/accounts-list/accounts-list.component.html
+++ b/src/app/features/admin/accounts/accounts-list/accounts-list.component.html
@@ -4,12 +4,12 @@
 
         <mat-form-field class="custom-input col-span-1" appearance="outline">
             <mat-label class="bg-white">{{'AdminPage.accountsPage.account' | translate}}</mat-label>
-            <input formControlName="account" matInput (keyPress)="searchByEnter($event)" />
+            <input formControlName="account" matInput (keypress)="searchByEnter($event)" />
         </mat-form-field>
 
         <mat-form-field class="custom-input col-span-1" appearance="outline">
             <mat-label class="bg-white">{{'AdminPage.accountsPage.fullName' | translate}}</mat-label>
-            <input formControlName="fullName" matInput (keyPress)="searchByEnter($event)" />
+            <input formControlName="fullName" matInput (keypress)="searchByEnter($event)" />
         </mat-form-field>
 
         <mat-form-field class="custom-input col-span-1" appearance="outline">
