--- a/src/app/features/admin/posts/post-list/post-list.component.html
+++ b/src/app/features/admin/posts/post-list/post-list.component.html
@@ -3,12 +3,12 @@
 
         <mat-form-field class="custom-input col-span-1" appearance="outline">
             <mat-label class="bg-white">{{'labelInput.title' | translate}}</mat-label>
-            <input formControlName="title" matInput (keyPress)="searchByEnter($event)" />
+            <input formControlName="title" matInput (keypress)="searchByEnter($event)" />
         </mat-form-field>
 
         <mat-form-field class="custom-input col-span-1" appearance="outline">
             <mat-label class="bg-white">{{'labelInput.owner' | translate}}</mat-label>
-            <input formControlName="owner" matInput (keyPress)="searchByEnter($event)" />
+            <input formControlName="owner" matInput (keypress)="searchByEnter($event)" />
         </mat-form-field>
 
         <mat-form-field class="custom-input col-span-1" appearance="outline">
